helm/examples/kind/k8s/namespace.yaml
"apiVersion": "v1"
"kind": "Namespace"
"metadata":
  "name": "dev"
  "labels":
    "name": "dev"
---
"apiVersion": "v1"
"kind": "Namespace"
"metadata":
  "name": "staging"
  "labels":
    "name": "staging"
