helm/examples/kind/k8s/ingress.dev.yaml
# SPDX-FileCopyrightText: 2022 2014-2015 Friedrich Lindenberg, <friedrich@pudo.org>, et al.
# SPDX-FileCopyrightText: 2022 2016-2020 Journalism Development Network,Inc
#
# SPDX-License-Identifier: MIT

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aleph-ingress-dev
  namespace: dev
spec:
  rules:
    - host: aleph.devel
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: aleph-ui
                port: 
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service: 
                name: aleph-api
                port: 
                  number: 8000
