helm/examples/kind/k8s/ingress.staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aleph-ingress-staging
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: aleph.staging
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: aleph-ui
                port: 
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service: 
                name: aleph-api
                port: 
                  number: 8000
